2012-05-16 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* control.h, indCIMXMLHandler.c, interopServerProvider.c:
	[ 3513390 ] Enforce LD and subscription limits
	Use hashtable instead of EI

2012-05-11  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* instance.c, indCIMXMLHandler.c, internalProvider.c,
	queryOperation.h, queryStatement.c, result.c,
	test/xmltest/InstanceTest25GetWithPropertyFilter.xml:
	[ 3525651 ] CMSetPropertyFilter not CMPI 2.0 compliant
	(based on patch by Tyrel Datwyler)

2012-04-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* control.c, indCIMXMLHandler.c, interopServerProvider.c,
	sfcb.cfg.pre.in, test/TestProviders/tests/Makefile.am,
	test/TestProviders/tests/limitTest.sh:
	[ 3513390 ] Enforce LD and subscription limits

2012-04-13 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3517573 ] Problem with SequenceContext migration

2012-04-13  Narasimhma Sharoff  <nsharoff@us.ibm.com>

	* brokerOs.c, brokerUpc.c, native.h:
	[ 3517530 ] Implement mark, release routines in CMPIBrokerMemFT 

2012-04-13  Narasimhma Sharoff  <nsharoff@us.ibm.com>

	* httpAdapter.c, httpComm.c:
	[ 3516184 ] commClose close socket when file hndl is null

2012-04-11  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* Makefile.am, cimXmlRequest.c, httpAdapter.c, httpComm.c,
	  providerDrv.c, providerMgr.c, sfcBroker.c, sfcb.cfg.pre.in,
	  trace.c, trace.h:
	[ 3501314 ] Add dynamic logging and syslog output to sfcb trace
	(based on patch from Mike Lisanke)

2012-04-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlRequest.c, control.c, httpAdapter.c, sfcb.cfg.pre.in:
	[ 3440300 ] Allow forced chunked responses

2012-04-05  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* control.c:
	[ 3514627 ] unsupported sfcb.cfg param - use exit call

2012-04-03  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* utilTypeCk.c:
	[ 3514443 ] sfcb 1.3.14 compilation error

2012-03-30  Chris Buccella  <buccella@linux.vnet.ibm.com>
