@@ -1,3 +1,10 @@
+2012-05-17  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* brokerUpc.c,
+	test/xmltest/enumerateInstance_CIM_IndicationService-propertyFilter.*:
+	[ 3527693 ] Property filters don't work for enum upcalls
+	(patch by Tyrel Datwyler)
+
 2012-05-16 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
 	* control.h, indCIMXMLHandler.c, interopServerProvider.c:
